--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -81,6 +81,7 @@
     <string translatable="false" name="pref_logimages">logimages</string>
     <string translatable="false" name="pref_choose_list">choose_list</string>
     <string translatable="false" name="pref_mapsource">mapsource</string>
+    <string translatable="false" name="pref_maplanguage">maplanguage</string>
     <string translatable="false" name="pref_mapDirectory">mapDirectory</string>
     <string translatable="false" name="pref_mapsforge_scale_text">mapsforgeScaleText</string>
     <string translatable="false" name="pref_map_manualrotation_disabled">map_manualrotation_disabled</string>
