--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -3,11 +3,12 @@
   <!-- changelog for the master branch -->
   <string name="changelog_master" translatable="false">
     <b>Next feature release:</b>\n
-    · New: Added button "Add current location" to create standard waypoint\n
+    · New: Added button \"Add current location\" to create standard waypoint\n
     · New: Added option to hide archived caches\n
     · New: Added map options to hide certain waypoint types\n
     · New: Show (unsaved) caches at corrected coordinates on live map if applicable\n
     · New: Create individual routes (by long pressing on icons in map)\n
+    · New: Added option to disable transparent background\n
     · Fix: Crash after "Remove all" in cache list\n
     · Fix: Crash after rapid movements on OSM map\n
     · Fix: Store manually set values in seekbar preferences\n
