--- a/main/res/menu/cache_options.xml
+++ b/main/res/menu/cache_options.xml
@@ -145,4 +145,9 @@
         app:showAsAction="ifRoom"
         android:visible="true">
     </item>
+    <item
+        android:id="@+id/menu_clear_goto_history"
+        android:title="@string/clear_goto_history_title"
+        android:visible="false">
+    </item>
 </menu>
