--- a/main/res/values/changelog_release.xml
+++ b/main/res/values/changelog_release.xml
@@ -9,6 +9,7 @@
     · New: Show (unsaved) caches at corrected coordinates on live map if applicable\n
     · New: Create individual routes (by long pressing on icons in map)\n
     · New: Added option to disable transparent background\n
+    · Fix: Optimize live map loading to avoid unneeded server requests\n
     · Fix: Crash after "Remove all" in cache list\n
     · Fix: Crash after rapid movements on OSM map\n
     · Fix: Store manually set values in seekbar preferences\n
