--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -3,7 +3,7 @@
   <!-- changelog for the master branch -->
   <string name="changelog_master" translatable="false">
     <b>Next feature release:</b>\n
-    · Change: Added closeout message for systems running on Android < 5.0\n
+    · Change: Added closeout message for systems running on Android &lt; 5.0\n
     · New: Show info on completion of "add current location"\n
     · New: Add option to clear the goto history\n
     · New: Support other OSM based online map sources\n
