show 'clear individual route' menu entry only when non-empty route is available (fix #8259)

--- a/main/res/menu/map_activity.xml
+++ b/main/res/menu/map_activity.xml
@@ -221,7 +221,8 @@
     </item>
     <item
         android:id="@+id/menu_clear_individual_route"
-        android:title="@string/map_clear_individual_route">
+        android:title="@string/map_clear_individual_route"
+        android:visible="false">
     </item>
 
 </menu>
