--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -571,20 +571,13 @@
                 android:key="@string/pref_mapsforge_scale_text"
                 android:summary="@string/settings_summary_scale_map_text"
                 android:title="@string/settings_title_scale_map_text" />
-        </PreferenceCategory>
-
-        <PreferenceCategory android:title="@string/settings_title_map_rotation"
-            android:layout="@layout/preference_category" >
-            <CheckBoxPreference
-                android:defaultValue="false"
-                android:key="@string/pref_map_manualrotation_disabled"
-                android:summary="@string/settings_summary_map_manualrotation_disabled"
-                android:title="@string/settings_title_map_manualrotation_disabled" />
-            <CheckBoxPreference
-                android:defaultValue="false"
-                android:key="@string/pref_map_autorotation_disabled"
-                android:summary="@string/settings_summary_map_autorotation_disabled"
-                android:title="@string/settings_title_map_autorotation_disabled" />
+            <ListPreference
+                android:title="@string/settings_title_map_rotation"
+                android:summary="%s"
+                android:key="@string/pref_mapRotation"
+                android:defaultValue="@string/pref_maprotation_manual"
+                android:entries="@array/maprotation"
+                android:entryValues="@array/maprotationValues" />
         </PreferenceCategory>
 
         <PreferenceCategory android:title="@string/settings_title_waypoints"
