--- a/main/res/menu/map_activity.xml
+++ b/main/res/menu/map_activity.xml
@@ -93,15 +93,27 @@
                 android:title="@string/map_dot_mode"
                 app:showAsAction="ifRoom|withText">
             </item>
-            <item
-                android:id="@+id/menu_map_autorotate"
-                android:checkable="true"
-                android:icon="@drawable/ic_menu_rotate"
-                android:title="@string/map_autorotate"
-                android:visible="false"
-                app:showAsAction="ifRoom|withText">
-            </item>
-
+        </menu>
+    </item>
+    <item
+        android:id="@+id/menu_map_rotation"
+        android:title="@string/map_rotation"
+        android:visible="false"
+        app:showAsAction="ifRoom|withText">
+        <menu>
+            <group
+                android:id="@+id/menu_group_map_rotation"
+                android:checkableBehavior="single" >
+                <item
+                    android:id="@+id/menu_map_rotation_off"
+                    android:title="@string/switch_off" />
+                <item
+                    android:id="@+id/menu_map_rotation_manual"
+                    android:title="@string/switch_manual" />
+                <item
+                    android:id="@+id/menu_map_rotation_auto"
+                    android:title="@string/switch_auto" />
+            </group>
         </menu>
     </item>
     <item
