--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -11,6 +11,7 @@
     · New: Implemented Filtering by Country\n
     · New: Copy waypoints between caches\n
     · New: Sort "goto history" waypoints by newest on top\n
+    · New: Add waypoint from single cache map added for Google Maps\n
     · Fix: Crash on moving data to SD card\n
   </string>
 </resources>
