--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -5,6 +5,7 @@
     <b>Next feature release:</b>\n
     · Change: Added closeout message for systems running on Android &lt; 5.0\n
     · Change: Allow max zoom on combined OpenStreetMap offline map\n
+    · Change: Coordinate editor: Validation deferred to save coordinates\n
     · New: Show info on completion of "add current location"\n
     · New: Add option to clear the goto history\n
     · New: Support other OSM based online map sources\n
