--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -16,6 +16,6 @@
     · New: Add waypoint from single cache map added for Google Maps\n
     · New: Allow starting WhereYouGo from cache detail's main page\n
     · Fix: Crash on moving data to SD card\n
-    · Fix: Empty country filter now filters for caches without a given location\n
+    · Fix: A couple of minor issues\n
   </string>
 </resources>
