--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -4,6 +4,7 @@
   <string name="changelog_master" translatable="false">
     <b>Next feature release:</b>\n
     · Change: Added closeout message for systems running on Android &lt; 5.0\n
+    · Change: Unified Google Maps rotation settings into menu entry \"Map rotation\"\n
     · Change: Allow max zoom on combined OpenStreetMap offline map\n
     · Change: Coordinate editor: Validation deferred to save coordinates\n
     · New: Show info on completion of "add current location"\n
