--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -16,7 +16,8 @@
     · New: Sort \"goto history\" waypoints by newest on top\n
     · New: Add waypoint from single cache map added for Google Maps\n
     · New: Allow starting WhereYouGo from cache detail\'s main page\n
-    · New: Open images from cache detail page in separate task (use long press)\n
+    · New: Open images from cache detail page in separate task\n
+    · New: Show waypoint user note in waypoint popup\n
     · Fix: Crash on moving data to SD card\n
     · Fix: A couple of minor issues\n
   </string>
