--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -21,7 +21,7 @@
     · Fix: Crash on moving data to SD card\n
     · Fix: A couple of minor issues\n
     · Fix: Cache gallery tab empty after editing personal note\n
-    · Fix: Crashes under sepcial circumstances on map\n
+    · Fix: Crashes under special circumstances on map\n
     · Fix: Individual route did not consider change of routing type\n
     · Fix: Individual route lost after resuming map\n
     · Fix: Show new waypoint in waypoint tab directly after creating it on map\n
