--- a/main/res/menu/map_activity.xml
+++ b/main/res/menu/map_activity.xml
@@ -168,6 +168,7 @@
                 android:checkable="true"
                 android:icon="@drawable/ic_menu_hidetrack"
                 android:title="@string/map_hide_track"
+                android:visible="false"
                 app:showAsAction="ifRoom|withText">
             </item>
         </menu>
