--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -6,9 +6,11 @@
     · Change: System requirements: c:geo now requires your system to run at least Android 5.0\n
     · Change: Set target SDK to 29 to comply with upcoming requirements for Play store\n
     · New: Load GPX track files and show track on map\n
+    · New: Export trail history as GPX track file\n
     · New: Offer a link to download OpenStreetMap offline maps\n
     · New: Integrate downloaded OpenStreetMap offline map files into c:geo after tapping on them\n
     · New: Support cache rating and managing of favorites for geocaching.su\n
+    · New: Customize map line colors and widths\n
     · New: Upgraded several included libraries to reflect our new minimum system requirements\n
     · New: Add debug view for program settings\n
     · Fix: Removed styles / themes workarounds used for older Android versions\n
